corpus/test.txt
====================
UNLESS Block
====================
[% UNLESS user.is_active %]
  <p>Inactive</p>
[% END %]

---
(source_file
  (conditional_block
    (conditional_start_directive (variable (identifier) (dot) (identifier)))
    (content)
    (end_directive)))

====================
Complex Expression
====================
[% IF user.type == 'admin' and user.id > 100 %]

---
(source_file
  (simple_directive
    (binary_expression
      (binary_expression
        (variable (identifier) (dot) (identifier))
        (comparison_operator)
        (string))
      (logical_op_high)
      (binary_expression
        (variable (identifier) (dot) (identifier))
        (comparison_operator)
        (bare_string)))))

====================
Complex Hash and Call
====================
[% myvar.push({ key => 'value' }) %]

---
(source_file
  (simple_directive
    (call_expression
      (variable (identifier) (dot) (identifier))
      (parenthesized_expression
        (hash
          (hash_pair (key (identifier)) (value (string))))))))

====================
Semicolon Separator
====================
[% a = 1; b = 2 %]

---
(source_file
  (simple_directive
    (statement_list
      (assignment_expression (variable (identifier)) (bare_string))
      (assignment_expression (variable (identifier)) (bare_string)))))

====================
Method Call on Variable
====================
[% lang.t('hello') %]

---
(source_file
  (simple_directive
    (statement_list
      (call_expression
        (function (variable (identifier) (dot) (identifier)))
        (arguments (parenthesized_expression (string)))))))

====================
Method Call on String Literal
====================
[% 'hello'.ucfirst() %]

---
(source_file
  (simple_directive
    (statement_list
      (call_expression
        (function (string))
        (arguments (parenthesized_expression))))))

====================
Call Expression in Hash Value
====================
[% myhash = { key => lang.t('value') } %]

---
(source_file
  (simple_directive
    (statement_list
      (assignment_expression
        (variable (identifier))
        (hash
          (hash_pair
            (key (identifier))
            (value
              (call_expression
                (function (variable (identifier) (dot) (identifier)))
                (arguments (parenthesized_expression (string)))))))))))

====================
Command Expression
====================
[% INCLUDE i/header.tt %]

---
(source_file
  (simple_directive
    (statement_list
      (command_expression
        (keyword)
        (bare_string)))))

====================
Multi-Argument Function Call
====================
[% myfunc(arg1, 'arg2', var.three) %]

---
(source_file
  (simple_directive
    (statement_list
      (call_expression
        (function (variable (identifier)))
        (arguments (argument_list
          (variable (identifier))
          (string)
          (variable (identifier) (dot) (identifier))))))))